manifests/02.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris-deployment
  namespace: huan-tetris-mp-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
      - name: tetris
        image: juannguyen0211/huan-gametetris-mp:latest
        ports:
        - containerPort: 80
